--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://andrewcloss.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
